Tests/typing/bad/testfile-dispatch-1.jl
function f(x::Nothing) end
f(42)
